[project]
name = "minetest-gymnasium"
version = "0.5.0"
description = "A Gymnasium environment for minetest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium",
    "numpy",
    "pycapnp",
]

[tool.ruff]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

[tool.pytest.ini_options]
filterwarnings = [
  'ignore::DeprecationWarning:pygame.pkgdata.*',
  'ignore:.*PYGAME_DETECT_AVX2=1.*:RuntimeWarning',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# See https://hatch.pypa.io/latest/config/build/#packages.
packages = [
    "minetest"
]

[tool.hatch.build.targets.sdist]
# See https://hatch.pypa.io/latest/config/build/#excluding-files-outside-packages.
only-packages = true
# See https://hatch.pypa.io/latest/config/build/#artifacts.
artifacts = [
    "*.capnp",
]
